fix layout on mobile

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .heading {
   text-align: center;
   color: var(--mint12);
-  margin: 32px;
+  margin: 1rem;
   font-size: 4rem;
 }
 
@@ -15,7 +15,6 @@
   padding: 16px;
   border-radius: 1rem;
   display: grid;
-  margin: 1rem;
   max-width: 70rem;
   margin: 1rem;
   box-shadow: var(--shadow-elevation-medium);
@@ -27,6 +26,11 @@
 @media (min-width: 600px) {
   .frame {
     grid-template-columns: 1fr 1fr;
-    box-shadow: var(--shadow-elevation-medium);
+  }
+}
+
+@media (max-width: 600px) {
+  .frame {
+    margin: 0;
   }
 }
