--- a/src/components/ResultSection/ResultSection.module.css
+++ b/src/components/ResultSection/ResultSection.module.css
@@ -17,3 +17,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media (max-width: 600px) {
+  .resultSection {
+    margin-top: 1.5rem;
+  }
+}
