--- a/src/components/SearchSection/SearchSection.module.css
+++ b/src/components/SearchSection/SearchSection.module.css
@@ -18,6 +18,5 @@
 @media (max-width: 600px) {
   .searchsection {
     width: 100%;
-    max-height: 90%;
   }
 }
